Fix content overflow style

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -324,6 +324,7 @@ body {
     padding: 15px;
     vertical-align: top;
     flex-grow: 1;
+    overflow: auto;
 }
 
 .sidebar_block {
